[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonte/retro_gaming/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/pausar.gd" type="Script" id=3]
[ext_resource path="res://Imagens/menudepausa2.png" type="Texture" id=4]
[ext_resource path="res://Imagens/menu.png" type="Texture" id=5]
[ext_resource path="res://Imagens/continuar.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=16]
size = 8
font_data = ExtResource( 1 )

[node name="pausar" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="Sprite" parent="."]
position = Vector2( 502, 266 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.75
margin_top = -105.0
margin_right = 156.25
margin_bottom = 51.0
custom_fonts/font = SubResource( 16 )
text = "JOGO PAUSADO"
align = 1

[node name="continuar" type="TouchScreenButton" parent="ColorRect"]
position = Vector2( -3.25, 10.75 )
scale = Vector2( 0.358458, 0.61747 )
normal = ExtResource( 6 )

[node name="Button" type="TouchScreenButton" parent="ColorRect"]
position = Vector2( -41.25, 12 )
scale = Vector2( 0.386287, 0.535713 )
normal = ExtResource( 5 )

[connection signal="pressed" from="ColorRect/continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
